Fix column width bug on mobile

--- a/_sass/site/layouts/_project.scss
+++ b/_sass/site/layouts/_project.scss
@@ -38,7 +38,7 @@
       }
 
       .project-detail-3 {
-        @include grid-column(2);
+        @include grid-column(3);
 
         @include grid-media(phablet) {
           @include grid-column(3);
